Run Qwen3.5-0.8B from its safetensors: the tokenizer package, -m chat, the vocabulary
examples/llama2/llama2.lisp now tokenizes through the shipped tokenizer: package
on both sides -- llama2.c's tokenizer.bin becomes a tokenizer:make-sentencepiece
(the hand-written BPE encoder and decode-piece are gone; the stories are
byte-identical) and a Hugging Face checkpoint's tokenizer.json a
tokenizer:make-bpe of the pre-tokenizer kind the architecture row names, with
the BOS / EOS ids from tokenizer_config.json. Tokens print as they come through
tokenizer:decode-bytes and a UTF-8 completeness check, so a character split
across two tokens prints whole. -m chat wraps the prompt in the family's
ChatML template (thinking off for Qwen3 / 3.5) and prints the answer alone;
LLAMA2_TRACE prints every id. The sampler chooses among the tokenizer's ids:
Qwen3.5's vocab_size 248320 is the padded embedding table and its vocabulary
is 248070. A stop token ends the answer only when the model produced it -- the
template's own <|im_end|> is part of the prompt.

tokenizer.json is 13 MB of non-Latin-1 text and rontolisp:json-parse over it
does not finish on the JVM or the interpreter (.todo/690, filed with the
measurement: the two-entry surrogate-free memory thrashes when a parse cuts
small strings out of the big one), so this file reads it with a byte-level JSON
reader of its own until that lands.

With that, Qwen3.5-0.8B -- 18 Gated DeltaNet blocks and 6 gated-attention
blocks read from the BF16 safetensors -- answers "Tell me a short story about
a cat." coherently at temperature 0 on the JVM class output: 2.0-2.5 tok/s on
one thread, 8.6 under --parallel (dorian, loadavg 13-21; .todo/677 has the
figures, the config findings and the checkpoint's path). The README carries the
TinyLlama rows the coordinator measured, with the bandwidth reading.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Ahqksf3ojxYdshtwWfsUtb